Added Post model

--- a/app/assets/stylesheets/customs.scss
+++ b/app/assets/stylesheets/customs.scss
@@ -6,10 +6,10 @@
 $headerFont: 'Righteous', cursive;
 $paraFont: 'Roboto', sans-serif;
 
-$primaryColor: #8d5e8d;
+$primaryColor: #d1bed1;
 $btnColor: #a57fa5;
 $btnColorHover: #a57fa5;
-
+// #8d5e8d
 * {
   box-sizing: border-box;
 }
