--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -16,12 +16,12 @@
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.email %> <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username.upcase %> <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "Edit My Profile", edit_user_registration_path %></li>
 
               <li role="separator" class="divider"></li>
-              <li><%= link_to "Log Out", destroy_user_session_path %></li>
+              <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
             </ul>
           </li>
         <% else %>
