--- a/app/assets/stylesheets/customs.scss
+++ b/app/assets/stylesheets/customs.scss
@@ -70,8 +70,6 @@ p.login-signup  {
   border-radius: 25%;
 }
 
-
-
 /**************
      ALERT
 ***************/
@@ -87,6 +85,28 @@ p.login-signup  {
     background-color: $btnColorHover;
   }
 }
+/******************
+ USER PROFILE PAGE
+******************/
+.userposts  {
+  list-style: none;
+  li  {
+    margin-bottom: 10px;
+    padding: 5px 15px;
+    border: 1px solid red;
+  }
+}
+
+.content,
+.timestamp  {
+  display: block;
+}
+
+.timestamp  {
+  color: lightgray;
+  font-size: .8em;
+}
+
 
 /**************
   FOOTER
