--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,6 @@
     <div class="container">
       <%= yield %>
     </div>
-
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
