--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -19,7 +19,7 @@
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username.upcase %> <span class="caret"></span></a>
+              <a href="/users/"  class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.username.upcase %> <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Edit My Profile", edit_user_registration_path %></li>
 
