--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -11,7 +11,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "TooT", root_path, class: "navbar-brand" %>
+        <%= link_to "TooT", root_path, class: "navbar-brand", id: "navbar-brand"%>
       </div><!-- end of navbar-header -->
 
       <!-- Collect the nav links, forms, and other content for toggling -->
