Commiting with basic user/post model up except for redirection after log in

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,11 @@
 <% if user_signed_in? %>
-  <%= render 'users/show' %>
+  <%#= render 'users/show' %>
 <% else %>
 
   <div class="home">
 
     <div class="row">
-      <div class="container header col-md-7">
+      <div class="container col-md-7">
         <h1 class="homeHeader">Toot is the liveliest community for your travel conversations.</h1>
         <h2 class="homeSubheader">Some nice sub-header here.</h2>
       </div>
