--- a/app/assets/stylesheets/customs.scss
+++ b/app/assets/stylesheets/customs.scss
@@ -17,14 +17,14 @@ $navbarColor: white;
 
 @mixin button {
   padding: 5px 20px;
-  color: $primaryBrandColor;
-  background-color: white;
+  color: white;
+  background-color: $primaryBrandColor;
   border-radius: 4px;
-  border: 1px solid $primaryBrandColor;
+  border-color: transparent;
   &:hover{
-    color: white;
-    background-color: $primaryBrandColor;
-    border-color: transparent;
+    color: $primaryBrandColor;
+    background-color: white;
+    border: 1px solid $primaryBrandColor;
   }
 }
 
@@ -45,15 +45,16 @@ h1,h2  {
   text-align: center;
 }
 
+.btn,
+.btn-default  {
+  @include button;
+}
+
 /**************
   Home Page
 ***************/
 .home {
   margin-top: 15%;
-}
-
-.header {
-  // border-right: 4px solid $primaryBrandColor;
 }
 
 .homeHeader {
