Prevented user to access another user page and added flash partials

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,8 @@
         <p class="notice"><%= notice %></p>
         <p class="alert"><%= alert %></p>
       </div>
+
+      <%= render 'partials/flash' %>
     <% end %>
 
     <div class="container">
