--- a/app/assets/stylesheets/customs.scss
+++ b/app/assets/stylesheets/customs.scss
@@ -37,6 +37,7 @@ $navbarColor: white;
 }
 
 body  {
+  margin-top: 60px;
   background-color: #f5f5f5;
 }
 
@@ -115,7 +116,7 @@ h1,h2  {
 ***************/
 .alert,
 .notice  {
-  margin-top: 80px;
+  // margin-top: 80px;
   margin-bottom: 0;
   text-align: center;
 }
