--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,12 @@
       <%= render 'partials/navigation' %>
 
       <div class="container">
-        <p class="notice"><%= notice %></p>
-        <p class="alert"><%= alert %></p>
+        <p class="notice"><%#= notice %></p>
+        <p class="alert"><%#= alert %></p>
       </div>
-
-      <%= render 'partials/flash' %>
     <% end %>
+
+    <%= render 'partials/flash' %>
 
     <div class="container">
       <%= yield %>
