--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,10 @@
 <div class="container col-md-offset-2 col-md-8">
 
   <div class="row">
+    <%= render 'stats' %>
+  </div>
+
+  <div class="row">
     <%= render "posts/post_form" %>
   </div>
 
