--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,11 @@
   </div>
 
   <div class="row">
+    <%= render 'follow_form' if user_signed_in? %>
+  </div>
+
+
+  <div class="row">
     <%= render "posts/post_form" %>
   </div>
 
