Added feed to home page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,22 @@
 <% if user_signed_in? %>
-  <%#= render 'users/show' %>
+  <div class="container col-md-offset-2 col-md-8">
+
+    <div class="row">
+      <%= render 'users/stats' %>
+    </div>
+
+    <div class="row">
+      <%= render 'users/follow_form' if user_signed_in? %>
+    </div>
+
+    <div class="row">
+      <%= render "posts/post_form" %>
+    </div>
+
+    <div class="row">
+      <%= render 'users/feed' %>
+    </div>
+  </div>
 <% else %>
 
   <div class="home">
