--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,5 @@
-<li>
-  <%= link_to user.username, user %>
+<li class="follow-list">
+    <%= link_to user.username, user %>
+    <p>Button to unfollow</p>
+    <%#= render 'users/unfollow' %>
 </li>
