--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -1,9 +1,18 @@
-<div class="container col-md-offset-2 col-md-8">
-  <h3><%= @title %></h3>
-    <% if @users.any? %>
-      <ul class="users follow">
-        <%= render @users %>
-      </ul>
-      <%= will_paginate %>
+<div class="container col-md-offset-2 col-md-9">
+
+  <div class="follow-header">
+    <h3 class="follow-current"><%= @title %></h3>
+    <% if @title == "following" %>
+      <h3><%= link_to "followers", followers_user_path(@user), class: "show-follow-Btn" %></h3>
+    <% else %>
+      <h3><%= link_to "following", following_user_path(@user), class: "show-follow-Btn" %></h3>
     <% end %>
+  </div>
+
+  <% if @users.any? %>
+    <ul class="users follow">
+      <%= render @users %>
+    </ul>
+    <%= will_paginate %>
+  <% end %>
 </div>
