--- a/app/views/posts/_post_form.html.erb
+++ b/app/views/posts/_post_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for @post do |f| %>
   <div class="field newContentDiv">
-    <%= f.text_area :content, placeholder: "Don't think, just toot it, " + @user.username.upcase, class: "newContent col-md-offset-1 col-md-10"%>
+    <%= f.text_area :content, placeholder: "Don't think, just toot it, " + @user.username.upcase, class: "newContent col-md-11"%>
     <%= f.submit "Toot it", class: "btn btn-primary tootBtn" %>
   </div>
 <% end %>
