--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,9 @@
+
+
+<%= render 'users/left_nav' %>
+
 <% if user_signed_in? %>
-  <div class="container col-md-offset-2 col-md-8">
-
-    <div class="row">
-      <%= render 'users/stats' %>
-    </div>
-
-    <div class="row">
-      <%= render 'users/follow_form' if user_signed_in? %>
-    </div>
+  <div class="container col-md-8">
 
     <div class="row">
       <%= render "posts/post_form" %>
