--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,18 +1,10 @@
+<%= render 'users/left_nav' %>
 
-<div class="container col-md-offset-2 col-md-8">
-
-  <div class="row">
-    <%= render 'stats' %>
-  </div>
-
-  <div class="row">
-    <%= render 'follow_form' if user_signed_in? %>
-  </div>
+<div class="container col-md-8">
 
   <div class="row">
     <%= render "posts/post_form" %>
   </div>
-
 
   <div class="row">
     <% if @user.posts.any? %>
