--- a/app/views/users/_left_nav.html.erb
+++ b/app/views/users/_left_nav.html.erb
@@ -7,7 +7,9 @@
   </div>
 
   <div class="row">
-    <%= render 'users/stats' %>
+    <% if user_signed_in? %>
+      <%= render 'users/stats' %>
+    <% end %>
   </div>
 
   <div class="row">
