--- a/app/assets/stylesheets/customs.scss
+++ b/app/assets/stylesheets/customs.scss
@@ -70,6 +70,10 @@ h1,h2  {
   color: $primaryBrandColor;
 }
 
+.listHomeBtn  {
+  list-style-type: none;
+}
+
 .homeBtn  {
   display: block;
   padding-top: 10px;
@@ -77,7 +81,6 @@ h1,h2  {
   margin-top: 15px;
   height: 50px;
   width: 350px;
-  list-style: none;
   font-size: 1.5em;
   font-weight: bold;
   color: white;
