--- a/app/views/users/_left_nav.html.erb
+++ b/app/views/users/_left_nav.html.erb
@@ -6,13 +6,17 @@
     <% end %>
   </div>
 
-  <div class="row">
-    <% if user_signed_in? %>
+  <% if user_signed_in? %>
+    <div class="row">
       <%= render 'users/stats' %>
-    <% end %>
-  </div>
+    </div>
 
-  <div class="row">
-    <%= render 'users/follow_form' if user_signed_in? %>
-  </div>
+    <div class="row">
+      <%= render 'users/follow_form' %>
+    </div>
+
+    <div class="row">
+      <%= render 'groups/group_form' %>
+    </div>
+  <% end %>
 </div>
