--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -6,11 +6,10 @@
 
   <div class="row">
     <% if @user.posts.any? %>
-      <ol class="userPosts">
-        <%= render 'posts/post' %>
+      <ol class="groupPosts">
+        <%= render 'groups/post' %>
       </ol>
     <% end %>
-    <%= will_paginate @posts %>
   </div>
 
 </div>
