--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -6,10 +6,11 @@
 
   <div class="row">
     <% if @user.posts.any? %>
-      <ol class="groupPosts">
-        <%= render 'groups/post' %>
+      <ol class="userPosts">
+        <%= render 'posts/post' %>
       </ol>
     <% end %>
+    <%= will_paginate @posts %>
   </div>
 
 </div>
