--- a/app/views/users/_left_nav.html.erb
+++ b/app/views/users/_left_nav.html.erb
@@ -16,7 +16,7 @@
     </div>
 
     <div class="row">
-      <%= render 'groups/group_form' %>
+      <%#= render 'groups/group_form' %>
     </div>
   <% end %>
 </div>
