--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,6 @@
 
     <% if user_signed_in? %>
       <%= render 'partials/navigation' %>
-
-      <div class="container">
-        <p class="notice"><%#= notice %></p>
-        <p class="alert"><%#= alert %></p>
-      </div>
     <% end %>
 
     <%= render 'partials/flash' %>
@@ -26,4 +21,7 @@
     </div>
     <%#= debug(params) if Rails.env.development? %>
   </body>
+
+  <%= render 'partials/footer' %>
+
 </html>
