--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,4 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<div class="col-md-8 col-md-offset-2">
+  <h1>StaticPages#about</h1>
+  <p>Find me in app/views/static_pages/about.html.erb</p>
+</div>
