--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,9 @@
 
 <div class="container col-md-8">
 
-  <% if @user.id != current_user.id %>
+  <h3>Hello <%= @user.username %></h3>
+
+  <% if @user.id == current_user.id %>
     <div class="row">
       <%= render "posts/post_form" %>
     </div>
