--- a/app/assets/stylesheets/customs.scss
+++ b/app/assets/stylesheets/customs.scss
@@ -153,6 +153,23 @@ h1,h2  {
 }
 
 /******************
+ User Index
+******************/
+.user-list  {
+  display: inline-block;
+  width: 400px;
+  margin-bottom: 10px;
+  padding: 15px 0 10px 10px;
+  height: 80px;
+  font-size: 1.2em;
+  list-style: none;
+  @include box;
+  p {
+    font-size: 0.8em;
+    color: grey;
+  }
+}
+/******************
  User Profile Page
 ******************/
 /* new content */
@@ -267,6 +284,7 @@ ul.users  {
 footer  {
   padding-top: 10px;
   padding-bottom: 20px;
+  background-color: white;
   border-top: 2px solid $primaryBrandColor;
 }
 
