--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,6 @@
     <%#= debug(params) if Rails.env.development? %>
   </body>
 
-  <%= render 'partials/footer' %>
+  <%#= render 'partials/footer' %>
 
 </html>
