manage to route to group after creation

--- a/app/views/users/_left_nav.html.erb
+++ b/app/views/users/_left_nav.html.erb
@@ -3,6 +3,8 @@
   <div class="row">
     <% unless current_user?(@user) %>
       <%= link_to "My Profile", user_path(current_user), class: "my-profile" %>
+    <% else %>
+      <%= link_to "Back to Home", root_path, class: "my-profile" %>
     <% end %>
   </div>
 
@@ -15,8 +17,10 @@
       <%= render 'users/follow_form' %>
     </div>
 
-    <div class="row">
-      <%= render 'groups/group_form' %>
-    </div>
+    <% if current_user.id == @user.id %>
+      <div class="row">
+        <%= render 'groups/group_form' %>
+      </div>
+    <% end %>
   <% end %>
 </div>
