Limit user home and user profile view to exclude group posts

--- a/app/views/groups/_group_post.html.erb
+++ b/app/views/groups/_group_post.html.erb
@@ -2,9 +2,9 @@
   <span class="postuser"><%= link_to @post.user.username.upcase, @post.user %></span>
   <span class="content"><%= @post.content %></span>
 
-  <% unless @post.created_at.nil? %>
+  <!-- <% unless @post.created_at.nil? %> -->
     <span class="timestamp">
       Tooted <%= time_ago_in_words(@post.created_at) %> ago.
     </span>
-  <% end %>
+  <!-- <% end %> -->
 </li>
