--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -8,7 +8,7 @@
 
   <div class="row">
     <% if @group.posts.any? %>
-      <ol class="userPosts">
+      <ol class="groupPosts">
         <%= render 'groups/group_post' %>
       </ol>
     <% end %>
